Update LoggingSAXHandlerWrapper.java